syntax = "proto3";

package bamboo.services.access;

option go_package = "access";

import "google/protobuf/timestamp.proto";

// BambooAccessAPI is the user-facing API provided by Bamboo access nodes.
service BambooAccessAPI {
  // SendTransaction submits a transaction to the network.
  rpc SendTransaction(SendTransactionRequest) returns (SendTransactionResponse);
  // GetBlockByHash gets a block by hash.
  rpc GetBlockByHash(GetBlockByHashRequest) returns (GetBlockByHashResponse);
  // GetBlockByNumber gets a block by number.
  rpc GetBlockByNumber(GetBlockByNumberRequest) returns (GetBlockByNumberResponse);
  // GetLatestBlock gets the latest sealed block.
  rpc GetLatestBlock(GetLatestBlockRequest) returns (GetLatestBlockResponse);
  // GetTransactions gets a transaction by hash.
  rpc GetTransaction(GetTransactionRequest) returns (GetTransactionResponse);
  // GetAccount gets an account by address.
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  // CallContract performs a contract call.
  rpc CallContract(CallContractRequest) returns (CallContractResponse);
}

message Signature {
  bytes account_address = 1;
  bytes signature = 2;
}

message SendTransactionRequest {
  message Transaction {
    bytes to_address = 1;
    bytes script = 2;
    uint64 nonce = 3;
    uint64 compute_limit = 4;
    Signature payer_signature = 5;
  }
  Transaction transaction = 1;
}

message SendTransactionResponse {
  bytes hash = 1;
}

message Block {
  enum Status {
    STATUS_PENDING = 0;
    STATUS_SEALED = 1;
  }
  bytes hash = 1;
  uint64 number = 2;
  bytes prev_block_hash = 3;
  google.protobuf.Timestamp timestamp = 4;
  repeated bytes transaction_hashes = 5;
  Status status = 6;
}

message GetBlockByHashRequest {
  bytes hash = 1;
}

message GetBlockByHashResponse {
  Block block = 1;
}

message GetBlockByNumberRequest {
  uint64 number = 1;
}

message GetBlockByNumberResponse {
  Block block = 1;
}

message GetLatestBlockRequest {
  bool is_sealed = 1;
}

message GetLatestBlockResponse {
  Block block = 1;
}

message GetTransactionRequest {
  bytes hash = 1;
}

message GetTransactionResponse {
  message Transaction {
    enum Status {
      STATUS_PENDING = 0;
      STATUS_FINALIZED = 1;
      STATUS_REVERTED = 2;
      STATUS_SEALED = 3;
    }
    bytes to_address = 1;
    bytes script = 2;
    uint64 nonce = 3;
    uint64 compute_limit = 4;
    uint64 compute_used = 5;
    Signature payer_signature = 6;
    Status status = 7;
  }
  Transaction transaction = 1;
}

message GetAccountRequest {
  bytes address = 1;
}

message GetAccountResponse {
  message Account {
    bytes address = 1;
    uint64 balance = 2;
    bytes code = 3;
    repeated bytes public_keys = 4;
  }
  Account account = 1;
}

message CallContractRequest {
  bytes script = 1;
}

message CallContractResponse {
  bytes script = 1;
}
